--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11278,6 +11278,11 @@ p, ul {
   width: 15%;
 }
 
+.price-card .img-holder {
+  padding: 40px 25px 30px 25px;
+  width: 15%;
+}
+
 .blog-card .date-holder {
   margin-top: 30px;
   font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
@@ -11285,6 +11290,12 @@ p, ul {
 }
 
 .blog-card .img-holder img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.price-card .img-holder img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
