--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11286,12 +11286,13 @@ p, ul {
 
 .blog-card .date-holder {
   margin-top: 30px;
-  font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
-  text-align: center;
+  margin-left: 15%;
+  font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1600 - 300)));
+  /* text-align: center; */
 }
 
 .blog-card .img-holder img {
-  width: calc(60px + (180 - 60) * ((100vw - 300px) / (1600 - 300)));
+  width: calc(60px + (150 - 60) * ((100vw - 300px) / (1600 - 300)));
   -o-object-fit: cover;
      object-fit: cover;
 }
