--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -1790,9 +1790,10 @@ pre code {
   width: 100%;
   margin-bottom: 1rem;
   color: #212529;
+  border-collapse: collapse;
 }
 
-.table th,
+/* .table th,
 .table td {
   padding: 0.75rem;
   vertical-align: top;
@@ -1802,6 +1803,21 @@ pre code {
 .table thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
+} */
+
+/* table {
+  width: 100%;
+  border-collapse: collapse;
+} */
+th, td {
+  border: 1px solid #212529;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #212529;
+  text-align: center;
 }
 
 .table tbody + tbody {
