--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -536,6 +536,11 @@ pre code {
   background-image: linear-gradient(to top, rgba(5, 21, 69, 0.5), rgba(5, 21, 69, 0.5)), url(../imgs/skills.png);
 }
 
+.network{
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/network.png);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../imgs/network.png);
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -1817,7 +1822,7 @@ th, td {
 }
 
 th {
-  color: rgba(225, 225, 225, 1);
+  /* color: rgba(225, 225, 225, 1); */
   /* background-color: rgba(5, 21, 69, 0.8); */
   background-color: rgba(14, 164, 201, 0.1);
   text-align: center;
@@ -2715,7 +2720,8 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  /* color: #212529; */
+  COLOR: #FFF;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2724,7 +2730,7 @@ textarea.form-control {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 0.5rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
@@ -7209,7 +7215,8 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  /* background-color: #343a40 !important; */
+  background-color: #2b2f44 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
@@ -11531,7 +11538,7 @@ pre .code {
 }
 
 .footer {
-  background: #17263C;
+  background: #2b2f44;
 }
 
 .header {
