--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -2188,7 +2188,7 @@ th {
   background-color: #fff;
   border-color: #9febef;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2520,7 +2520,7 @@ textarea.form-control {
 
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
   border-color: #1ac7c1;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .was-validated .form-control:invalid ~ .invalid-feedback,
@@ -2542,7 +2542,7 @@ textarea.form-control {
 
 .was-validated .custom-select:invalid:focus, .custom-select.is-invalid:focus {
   border-color: #1ac7c1;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .was-validated .custom-select:invalid ~ .invalid-feedback,
@@ -2587,7 +2587,7 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before, .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .was-validated .custom-control-input:invalid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-invalid:focus:not(:checked) ~ .custom-control-label::before {
@@ -2606,7 +2606,7 @@ textarea.form-control {
 
 .was-validated .custom-file-input:invalid:focus ~ .custom-file-label, .custom-file-input.is-invalid:focus ~ .custom-file-label {
   border-color: #1ac7c1;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .form-inline {
@@ -2752,7 +2752,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
+  /* box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25); */
 }
 
 .btn.disabled, .btn:disabled {
@@ -4018,7 +4019,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -4170,7 +4171,7 @@ input[type="button"].btn-block {
 .custom-select:focus {
   border-color: #9febef;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4228,7 +4229,7 @@ input[type="button"].btn-block {
 
 .custom-file-input:focus ~ .custom-file-label {
   border-color: #9febef;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4291,15 +4292,15 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -5398,7 +5399,7 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(248, 92, 112, 0.25);
+  box-shadow: 0 0 0 0.2rem rgb(23, 166, 161,0.25);
 }
 
 .page-item:first-child .page-link {
