--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11203,7 +11203,7 @@ p, ul {
 .portfolio .filters a {
   display: block;
   color: #444;
-  font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300)));
+  font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
   font-weight: 500;
   opacity: .8;
   padding: 4px 10px;
@@ -11314,10 +11314,11 @@ p, ul {
   margin-bottom: 5px;
 }
 
+
 .blog-card .date-holder {
   margin-top: 30px;
   margin-left: 15%;
-  font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300)));
+  font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
   /* text-align: center; */
 }
 
@@ -11340,7 +11341,7 @@ p, ul {
 
 .blog-card .content-holder .title {
   font-weight: 500;
-  font-size: 25px;
+  /* font-size: 25px; */
   opacity: .8;
 }
 
