--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -123,6 +123,7 @@ dd {
 
   /* citações */
 blockquote {
+  font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
   font-style: italic;
   margin: 0 0 1rem; }
 
@@ -320,7 +321,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2rem;
+  font-size: calc(23px +(35 - 23)*((100vw - 300px) /(1600 - 300)));
 }
 
 h3, .h3 {
@@ -515,7 +516,7 @@ pre code {
 
 .container_title .subtitle {
   font-weight: 200;
-  font-size: calc(20px + (45 - 20) * ((100vw - 300px) / (1600 - 300)));
+  font-size: calc(25px + (45 - 25) * ((100vw - 300px) / (1600 - 300)));
   text-align: center;
   position: relative;
   top: 40%;
@@ -11293,7 +11294,7 @@ p, ul {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  text-align: left;
+  /* text-align: left; */
   border: 1.5px solid #dee2e6;
   margin-bottom: 30px;
   overflow: hidden;
@@ -11303,12 +11304,12 @@ p, ul {
 }
 
 .blog-card .img-holder {
-  padding: 40px 25px 30px 25px;
+  padding: 40px 0px 30px 25px;
   width: 15%;
 }
 
 .price-card .img-holder {
-  padding: 10px;
+  /* padding: 10px; */
   width: 50%;
   margin-left: 25%;
   margin-bottom: 5px;
@@ -11323,14 +11324,14 @@ p, ul {
 }
 
 .blog-card .img-holder img {
-  width: calc(60px + (150 - 60) * ((100vw - 300px) / (1600 - 300)));
-  margin-bottom: 5px;
+  width: calc(100px + (140 - 100) * ((100vw - 300px) / (1600 - 300)));
+  margin-bottom: 10px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .price-card .img-holder img {
-  width: calc(60px + (150 - 60) * ((100vw - 300px) / (1600 - 300)));
+  width: calc(100px + (140 - 100) * ((100vw - 300px) / (1600 - 300)));
   -o-object-fit: cover;
      object-fit: cover;
 }
