--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -538,8 +538,8 @@ pre code {
 }
 
 .awards{
-  background-image: -webkit-linear-gradient(bottom, rgba(29, 36, 42, 0.2), rgba(29, 36, 42, 0.2)), url(../imgs/awards.gif);
-  background-image: linear-gradient(to top, rgba(29, 36, 42, 0.2), rgba(29, 36, 42, 0.2)), url(../imgs/awards.gif);
+  background-image: -webkit-linear-gradient(bottom, rgba(29, 36, 42, 0.3), rgba(29, 36, 42, 0.3)), url(../imgs/awards3.gif);
+  background-image: linear-gradient(to top, rgba(29, 36, 42, 0.3), rgba(29, 36, 42, 0.3)), url(../imgs/awards3.gif);
   background-size: cover;
 }
 
@@ -11561,8 +11561,8 @@ pre .code {
   position: relative;
   height: 80vh;
   min-height: 600px;
-  background-image: -webkit-linear-gradient(bottom, rgba(29, 36, 42, 0.5), rgba(29, 36, 42, 0.5)), url(../imgs/header.jpg);
-  background-image: linear-gradient(to top, rgba(29, 36, 42, 0.5), rgba(29, 36, 42, 0.5)), url(../imgs/header.jpg);
+  background-image: -webkit-linear-gradient(bottom, rgba(29, 36, 42, 0.8), rgba(29, 36, 42, 0.5)), url(../imgs/header.jpg);
+  background-image: linear-gradient(to top, rgba(29, 36, 42, 0.8), rgba(29, 36, 42, 0.5)), url(../imgs/header.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
