--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11430,17 +11430,25 @@ pre .code {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
+  -webkit-box-pack: center;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
+      -ms-flex-pack: center;
           justify-content: space-between;
   /* max-width: 180px; */
   max-width: 100px;
 }
 
 .social-icons .social-link {
-  font-size: 23px;
+  font-size: 18px;
+  color: #fff;
 }
+
+.footer .social-icons .social-link {
+  font-size: 23px;
+  color: #fff;
+  /* padding-left: 50%; */
+}
+
 
 .social-icons .social-link:hover {
   color: #1ac7c1;
