--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11450,6 +11450,21 @@ pre .code {
   /* padding-left: 50%; */
 }
 
+.footer .social-icons{
+  list-style-type: none;
+  padding-left: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: center;
+          justify-content: space-between;
+  /* max-width: 180px; */
+  max-width: 100px;
+}
+
 
 .social-icons .social-link:hover {
   color: #1ac7c1;
@@ -11566,6 +11581,12 @@ pre .code {
   background: rgba(29, 36, 42, 1);
   padding: 60px 0;
   text-align:center;
+}
+
+.footer .container{
+  position: relative;
+  width: 100%;
+  align-content: center;
 }
 
 .header {
