--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11445,24 +11445,14 @@ pre .code {
 }
 
 .footer .social-icons .social-link {
-  font-size: 23px;
-  align-items: center;
-  display:flex;
+  font-size: 20px;
+  /* align-items: center;
+  display:flex; */
 }
 
 .footer .social-icons{
-  list-style-type: none;
-  padding-left: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: center;
-          justify-content: space-between;
-  /* max-width: 180px; */
-  max-width: 100px;
+  display: inline-flex;
+  letter-spacing: 20px;
 }
 
 
