--- a/assets/css/mariana.css
+++ b/assets/css/mariana.css
@@ -11385,6 +11385,8 @@ p, ul {
   display: block;
   font-size: 14px;
   color: #1ac7c1;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .blog-card .content-holder .read-more i {
